# llamacpp_client

./: LICENSE  README.md  pyproject.toml
examples/: apply_template.py  completions.py  detokenize.py  embedding.py  health.py  infill.py  tokenizee.py
src/llamacpp_client/: client.py  exceptions.py  models.py
tests/: client_test.py
