[project]
name = "llamacpp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "webzak", email = "2851105+webzak@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.7",
    "pytest>=8.4.0",
    "requests>=2.32.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llamacpp_client"]
